# MCT_NERF

./: README.md  pyproject.toml
docs/: conf.py  index.md
docs/_pygments/: style.py
docs/_static/: custom.js
docs/_templates/: base.html
docs/developer_guides/: config.md  new_methods.md
docs/extensions/: blender_addon.md  sdfstudio.md  unreal_engine.md
docs/quickstart/: custom_dataset.md  data_conventions.md  export_geometry.md  first_nerf.md  installation.md  viewer_quickstart.rst
docs/reference/: contributing.md
mct/: pyproject.toml
mct/mct/: mct_camera_utils.py  mct_config.py  mct_dataparser.py  mct_dataparser_sdf.py  mct_dataparseroutputs.py  mct_mipnerf.py  mct_nerfacto.py  mct_neus.py  mct_neusfacto.py  mct_scene_box.py  mct_utils.py
mct/script/: block_train.bat  colmap_to_nerf.py  eval_psnr.py  exporter.py  exporter_mct.py  exporters.py  gen_mask.py  image_split.py  merge_block_img.py  model_size.py  nerf_pts2eachview.py  render_img.py  render_pcd.py  resize_img.py  split_block.py  split_block_new.py  step1_preprocess.py  step2_batch_train.py  step3_generate_pcd.py  step3_render_image.py  train.py  train_1.bat
nerfstudio/cameras/: camera_optimizers.py  camera_paths.py  camera_utils.py  cameras.py  lie_groups.py  rays.py
nerfstudio/configs/: base_config.py  config_utils.py  experiment_config.py  method_configs.py
nerfstudio/data/: pixel_samplers.py  scene_box.py
nerfstudio/engine/: callbacks.py  optimizers.py  schedulers.py  trainer.py
scripts/: eval.py  exporter.py  process_data.py  render.py  texture.py  train.py
tests/: test_train.py
(+269 files in other folders)
